--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
@@ -10,9 +10,6 @@
       <i class="check icon"></i> ลงในช่อง &nbsp;
       <input type="checkbox" disabled> &nbsp; พร้อมทั้งกรอกข้อความเท่าที่จำเป็น</h2>
   </div>
-
-
-
   <br>
   <form class="ui form" id="form" [formGroup]="formControl" (submit)="save($event)">
 
@@ -185,24 +182,24 @@
       <!-- radio -->
 
       <!-- form array -->
-      <div formArrayName="items" *ngFor="let item of formControl.get('items').controls; let i = index;">
+      <div formArrayName="items" *ngFor="let item of items.controls; let i = index;">
         <div [formGroupName]="i">
           <div class="inline fields ">
             <div class="two wide field"></div>
             <div class="two wide field required">
-              <label class="text-right full-width">{{i+1}}) บุตรชื่อ </label>
+              <label >{{i+1}}) บุตรชื่อ </label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.name.invalid }">
-              <input type="text" formControlName="name" name="name" id="name">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'name')}">
+              <input type="text" formControlName="name" name="name{{i}}" id="name{{i}}">
             </div>
             <div class="two wide field">
               <label> เกิดเมื่อ </label>
             </div>
-            <div class="three wide field">
+            <div class="three wide field" >
               <div class="ui calendar full-width birth" id="birth{{i+1}}">
                 <div class="ui input left icon">
                   <i class="calendar alter nate outline icon"></i>
-                  <input type="text" formControlName="birth" name="birth" id="birth" autocomplete="off" [attr.readonly]="null"
+                  <input type="text" formControlName="birth" name="birth{{i}}" id="birth{{i}}" autocomplete="off" [attr.readonly]="null"
                     placeholder="วว/ดด/ปปปป" [attr.required]="true" >
                 </div>
               </div>
@@ -214,14 +211,14 @@
             <div class="two wide field required">
               <label> เป็นบุตรลำดับที่ (ของบิดา) </label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.orderFather.invalid }">
-              <input type="number" formControlName="orderFather" name="orderFather" id="orderFather">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'orderFather') }">
+              <input type="number" formControlName="orderFather" name="orderFather{{i}}" id="orderFather{{i}}">
             </div>
             <div class="two wide field required">
               <label> เป็นบุตรลำดับที่ (ของมารดา) </label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.orderMather.invalid }">
-              <input type="number" formControlName="orderMather" name="orderMather" id="orderMather">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'orderMather') }">
+              <input type="number" formControlName="orderMather" name="orderMather{{i}}" id="orderMather{{i}}">
             </div>
           </div>
           <div class="inline fields ">
@@ -231,7 +228,7 @@
               <label class="text-right full-width">(กรณีเป็นบุตรแทนที่บุตรซึ่งถึงแก่กรรมแล้ว) &nbsp; &nbsp; แทนที่บุตรลำดับที่ </label>
             </div>
             <div class="three wide field">
-              <input type="number" formControlName="orderReplace" name="orderReplace" id="orderReplace">
+              <input type="number" formControlName="orderReplace" name="orderReplace{{i}}" id="orderReplace{{i}}">
             </div>
           </div>
           <div class="inline fields ">
@@ -240,7 +237,7 @@
               <label>ชื่อ </label>
             </div>
             <div class="three wide field">
-              <input type="text" formControlName="nameReplace" name="nameReplace" id="nameReplace">
+              <input type="text" formControlName="nameReplace" name="nameReplace{{i}}" id="nameReplace{{i}}">
             </div>
             <div class="two wide field">
               <label> เกิดเมื่อ </label>
@@ -249,7 +246,7 @@
               <div class="ui calendar full-width birthReplace" id="birthReplace{{i+1}}">
                 <div class="ui input left icon">
                   <i class="calendar alter nate outline icon"></i>
-                  <input type="text" formControlName="birthReplace" name="birthReplace" id="birthReplace" autocomplete="off"
+                  <input type="text" formControlName="birthReplace" name="birthReplace{{i}}" id="birthReplace{{i}}" autocomplete="off"
                     [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true" >
                 </div>
               </div>
@@ -264,7 +261,7 @@
               <div class="ui calendar full-width dateDeadReplace" id="dateDeadReplace{{i+1}}">
                 <div class="ui input left icon">
                   <i class="calendar alter nate outline icon"></i>
-                  <input type="text" formControlName="dateDeadReplace" name="dateDeadReplace" id="dateDeadReplace"
+                  <input type="text" formControlName="dateDeadReplace" name="dateDeadReplace{{i}}" id="dateDeadReplace{{i}}"
                     autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true" >
                 </div>
               </div>
@@ -275,8 +272,8 @@
             <div class="two wide field required">
               <label>สถานศึกษา </label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.education.invalid }">
-              <input type="text" formControlName="education" name="education" id="education">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'education')}">
+              <input type="text" formControlName="education" name="education{{i}}" id="education{{i}}">
             </div>
           </div>
           <div class="inline fields ">
@@ -284,14 +281,14 @@
             <div class="two wide field required">
               <label>อำเภอ </label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.educationDistrict.invalid }">
-              <input type="text" formControlName="educationDistrict" name="educationDistrict" id="educationDistrict">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'educationDistrict')}">
+              <input type="text" formControlName="educationDistrict" name="educationDistrict{{i}}" id="educationDistrict{{i}}">
             </div>
             <div class="two wide field required">
               <label> จังหวัด </label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.educationProvince.invalid }">
-              <input type="text" formControlName="educationProvince" name="educationProvince" id="educationProvince">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'educationProvince')}">
+              <input type="text" formControlName="educationProvince" name="educationProvince{{i}}" id="educationProvince{{i}}">
             </div>
           </div>
           <div class="inline fields ">
@@ -299,14 +296,14 @@
             <div class="two wide field required">
               <label>ชั้นที่ศึกษา </label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.educationClass.invalid }">
-              <input type="text" formControlName="educationClass" name="educationClass" id="educationClass">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'educationClass')}">
+              <input type="text" formControlName="educationClass" name="educationClass{{i}}" id="educationClass{{i}}">
             </div>
             <div class="two wide field required">
               <label>จำนวน</label>
             </div>
-            <div class="three wide field" [ngClass]="{ 'error': submitted && c.amount.invalid }">
-              <input type="number" formControlName="amount" name="amount" id="amount">
+            <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'amount') }">
+              <input type="number" formControlName="amount" name="amount{{i}}" id="amount{{i}}">
             </div>
             <div class="two wide field">
               <label>บาท</label>
