--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
@@ -136,6 +136,10 @@
                         <i class="print icon"></i>
                         บันทึกข้อมูล
                     </button>
+                    <button class="ui mini yellow button"  (click)="export()">
+                        <i class="print icon"></i>
+                        ส่งออก
+                    </button>
                 </div>
             </div>
         </div>
